#20: Issues about recent commit